notebook: write collab_gmm

--- a/notebooks/00-yf-master_algo_class.ipynb
+++ b/notebooks/00-yf-master_algo_class.ipynb
@@ -2,14 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "from numba import jit, njit\n",
-    "from copy import deepcopy"
+    "from copy import deepcopy\n",
+    "from abc import abstractmethod\n",
+    "\n",
+    "from numba import njit\n",
+    "from numba import int32, float32    # import the types\n",
+    "from numba.experimental import jitclass\n",
+    "\n",
+    "spec = [\n",
+    "    ('value', int32),               # a simple scalar field\n",
+    "    ('array', float32[:]),          # an array field\n",
+    "]"
    ]
   },
   {
@@ -21,11 +30,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "class members are not yet supported: __init__, launch_collab, get_partitions_except_p",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-62-b2fa3368602c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;34m@\u001b[0m\u001b[0mjitclass\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mspec\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mclass\u001b[0m \u001b[0mMaster\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobject\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \"\"\"\n\u001b[1;32m      4\u001b[0m     \u001b[0mMaster\u001b[0m \u001b[0malgorithm\u001b[0m \u001b[0mmanaging\u001b[0m \u001b[0mthe\u001b[0m \u001b[0mcollaboration\u001b[0m \u001b[0mbetween\u001b[0m \u001b[0mthe\u001b[0m \u001b[0mlocal\u001b[0m \u001b[0mdata\u001b[0m \u001b[0msites\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \"\"\"\n",
+      "\u001b[0;32m~/.virtualenvs/ijcnn21/lib/python3.8/site-packages/numba/experimental/jitclass/decorators.py\u001b[0m in \u001b[0;36mwrap\u001b[0;34m(cls)\u001b[0m\n\u001b[1;32m     74\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mcls\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     75\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 76\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mregister_class_type\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcls\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mspec\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtypes\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mClassType\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mClassBuilder\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     77\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     78\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mcls_or_spec\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.virtualenvs/ijcnn21/lib/python3.8/site-packages/numba/experimental/jitclass/base.py\u001b[0m in \u001b[0;36mregister_class_type\u001b[0;34m(cls, spec, class_ctor, builder)\u001b[0m\n\u001b[1;32m    209\u001b[0m         \u001b[0mmsg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"class members are not yet supported: {0}\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    210\u001b[0m         \u001b[0mmembers\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m', '\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mothers\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 211\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmembers\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    212\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    213\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mv\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mprops\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: class members are not yet supported: __init__, launch_collab, get_partitions_except_p"
+     ]
+    }
+   ],
    "source": [
-    "class Master:\n",
+    "@jitclass(spec)\n",
+    "class Master(object):\n",
     "    \"\"\"\n",
     "    Master algorithm managing the collaboration between the local data sites\n",
     "    \"\"\"\n",
@@ -132,18 +156,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Collaborator():\n",
+    "class Collaborator:\n",
     "    \"\"\"\n",
     "    An abstract class representing a collaborator.\n",
     "    Collaborators can be of different types (running with different algorithms)\n",
     "    e.g. Gtms, gaussian mixture models, other mixture models, or any kind of probabilistic model.\n",
     "    \"\"\"\n",
     "    \n",
-    "    def __init__(self, X, Y=None, K=3 *args, **kwargs):\n",
+    "    def __init__(self, X, Y=None, K=3, *args, **kwargs):\n",
     "        \"\"\"\n",
     "        Parameters:\n",
     "            X: pandas.DataFrame\n",
@@ -153,8 +177,57 @@
     "            K: int\n",
     "                number of clusters looked for.\n",
     "        \"\"\"\n",
+    "        self.X = X\n",
     "        \n",
-    "    "
+    "    @abstractmethod\n",
+    "    def local_step(self):\n",
+    "        pass\n",
+    "    \n",
+    "    @abstractmethod\n",
+    "    def log_local(self):\n",
+    "        pass\n",
+    "    \n",
+    "    @abstractmethod\n",
+    "    def collaborate(self):\n",
+    "        pass\n",
+    "    \n",
+    "    @abstractmethod\n",
+    "    def log_collab(self):\n",
+    "        pass\n",
+    "    \n",
+    "    def get_partition_matrix(self):\n",
+    "        return self.R"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Collaborator_gmm(Collaborator):\n",
+    "    \"\"\"\n",
+    "    A Gaussian mixture model based collaborator\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    def __init__(self, X, Y=None, K=3, *args, **args):\n",
+    "        \"\"\"\n",
+    "        Parameters:\n",
+    "        X: pd.DataFrame\n",
+    "            the features\n",
+    "        Y (optional): pd.DataFrame\n",
+    "            the labels\n",
+    "        K (optional): int\n",
+    "            the number of clusters\n",
+    "        \"\"\"\n",
+    "        \n",
+    "        super().__init__(X=X, Y=Y, K=K)\n",
+    "        \n",
+    "    @njit\n",
+    "    def local_step(self):\n",
+    "        \"\"\"\n",
+    "        \n",
+    "        \"\"\""
    ]
   },
   {
