working on the master algo and generic collaborator

--- a/notebooks/00-yf-master_algo_class.ipynb
+++ b/notebooks/00-yf-master_algo_class.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,9 +15,13 @@
     "from numba import int32, float32    # import the types\n",
     "from numba.experimental import jitclass\n",
     "\n",
+    "# spec = [\n",
+    "#     ('value', int32),               # a simple scalar field\n",
+    "#     ('array', float32[:]),          # an array field\n",
+    "# ]\n",
+    "\n",
     "spec = [\n",
-    "    ('value', int32),               # a simple scalar field\n",
-    "    ('array', float32[:]),          # an array field\n",
+    "    ('max_iter', int32)\n",
     "]"
    ]
   },
@@ -30,67 +34,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "class members are not yet supported: __init__, launch_collab, get_partitions_except_p",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-62-b2fa3368602c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;34m@\u001b[0m\u001b[0mjitclass\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mspec\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mclass\u001b[0m \u001b[0mMaster\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobject\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \"\"\"\n\u001b[1;32m      4\u001b[0m     \u001b[0mMaster\u001b[0m \u001b[0malgorithm\u001b[0m \u001b[0mmanaging\u001b[0m \u001b[0mthe\u001b[0m \u001b[0mcollaboration\u001b[0m \u001b[0mbetween\u001b[0m \u001b[0mthe\u001b[0m \u001b[0mlocal\u001b[0m \u001b[0mdata\u001b[0m \u001b[0msites\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \"\"\"\n",
-      "\u001b[0;32m~/.virtualenvs/ijcnn21/lib/python3.8/site-packages/numba/experimental/jitclass/decorators.py\u001b[0m in \u001b[0;36mwrap\u001b[0;34m(cls)\u001b[0m\n\u001b[1;32m     74\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mcls\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     75\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 76\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mregister_class_type\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcls\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mspec\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtypes\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mClassType\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mClassBuilder\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     77\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     78\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mcls_or_spec\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/.virtualenvs/ijcnn21/lib/python3.8/site-packages/numba/experimental/jitclass/base.py\u001b[0m in \u001b[0;36mregister_class_type\u001b[0;34m(cls, spec, class_ctor, builder)\u001b[0m\n\u001b[1;32m    209\u001b[0m         \u001b[0mmsg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"class members are not yet supported: {0}\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    210\u001b[0m         \u001b[0mmembers\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m', '\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mothers\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 211\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmembers\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    212\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    213\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mv\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mprops\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: class members are not yet supported: __init__, launch_collab, get_partitions_except_p"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "@jitclass(spec)\n",
     "class Master(object):\n",
     "    \"\"\"\n",
     "    Master algorithm managing the collaboration between the local data sites\n",
     "    \"\"\"\n",
     "    \n",
+    "    \n",
     "    @njit\n",
-    "    def __init__(self, collabs=None, Xs=None, Ys=None, max_iter=0, *args, **kwargs):\n",
+    "    def __init__(self, collabs=None, max_iter=0, *args, **kwargs):\n",
     "        \"\"\"\n",
     "        Parameters:\n",
     "        collabs: list(Collaborator)\n",
     "            List of instances of type \"Collaborator\".\n",
-    "        X: list(pandas.DataFrame)\n",
+    "        max_iter (optional): int\n",
+    "            Maximum number of iterations in the collaborative phase\n",
+    "            \n",
+    "        optional:\n",
+    "        X (optional): list(pandas.DataFrame)\n",
     "            List of dataframes with same size than collabs.\n",
     "            The view of each collaborators, with acces to possibly different\n",
     "            set of individuals (identified by the index column).\n",
     "        Y (optional): list(pandas.DataFrame)\n",
     "            List of dataframes, one for each collaborator. With the indices and the labels.\n",
-    "        max_iter (optional): int\n",
-    "            Maximum number of iterations in the collaborative step\n",
     "            \n",
     "        notes:\n",
     "        02/02 14:16 - Xs and Ys are not necessary parameters, as we can get them from each collab.\n",
     "                      Consider removing them.\n",
     "        \"\"\"\n",
-    "        if collabs:\n",
-    "            self.collabs, self.P = collabs, len(collabs)\n",
-    "            \n",
-    "        if X:\n",
-    "            self.X = X\n",
-    "            \n",
-    "        if Y:\n",
-    "            self.Y = Y\n",
+    "        \n",
+    "        self.collabs, self.P = collabs, len(collabs)\n",
+    "        for i, collab in enumerate(self.collabs):\n",
+    "            collab.set_id(i)\n",
     "        \n",
     "        self.max_iter = max_iter\n",
     "        # create a log that will contain information about each step of the process\n",
-    "        self.log = []\n",
+    "        self.log = [] # validation indices (for each step, a list of dicts)\n",
+    "        self.collaboration_history = [] # confidence matrices\n",
+    "        \n",
     "        \n",
     "    @njit\n",
     "    def launch_collab(self):\n",
     "        \"\"\"\n",
     "        Proceed to the collaboration.\n",
-    "        \n",
     "        \"\"\"\n",
     "        \n",
     "        # each collaborator fits its parameters in the local step\n",
@@ -106,10 +95,10 @@
     "            stop, to_log = True, []\n",
     "            \n",
     "            # each data site is in turn considered as the local data site\n",
-    "            for p, collab in collabs:\n",
-    "                # it is provided with every remote partition matrix\n",
-    "                remote_partitions = self.get_partitions_except_p(p)\n",
-    "                collab.collaborate(remote_partitions)\n",
+    "            for p, collab in enumerate(collabs):\n",
+    "                # it is provided with a tuple for each remote data site: (Id, partition_matrix)\n",
+    "                remote_Ids, remote_partitions = self.get_partitions_except_p(p)\n",
+    "                collab.collaborate(remote_Ids, remote_partitions)\n",
     "                to_log.append(deepcopy(collab.log_collab()))\n",
     "                if not collab.stop_criterion():\n",
     "                    stop = False\n",
@@ -138,96 +127,14 @@
     "                id of the partition matrix to ignore.\n",
     "        \"\"\"\n",
     "        \n",
-    "        res = []\n",
+    "        res_Ids, res_partitions = []\n",
     "        for i, collab in self.collabs:\n",
     "            if i != p:\n",
-    "                res.append(deepcopy(collabs[i].get_partition_matrix()))\n",
-    "        return res\n",
+    "                res_Ids.append(collab.get_id())\n",
+    "                res_partitions.append(deepcopy(collab.get_partition_matrix()))\n",
+    "        return res_Ids, res_partitions\n",
     "    \n",
     "    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# collaborator"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Collaborator:\n",
-    "    \"\"\"\n",
-    "    An abstract class representing a collaborator.\n",
-    "    Collaborators can be of different types (running with different algorithms)\n",
-    "    e.g. Gtms, gaussian mixture models, other mixture models, or any kind of probabilistic model.\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    def __init__(self, X, Y=None, K=3, *args, **kwargs):\n",
-    "        \"\"\"\n",
-    "        Parameters:\n",
-    "            X: pandas.DataFrame\n",
-    "                dataframe with the view of the collaborator.\n",
-    "            Y: pandas.DataFrame\n",
-    "                dataframe withh the labels.\n",
-    "            K: int\n",
-    "                number of clusters looked for.\n",
-    "        \"\"\"\n",
-    "        self.X = X\n",
-    "        \n",
-    "    @abstractmethod\n",
-    "    def local_step(self):\n",
-    "        pass\n",
-    "    \n",
-    "    @abstractmethod\n",
-    "    def log_local(self):\n",
-    "        pass\n",
-    "    \n",
-    "    @abstractmethod\n",
-    "    def collaborate(self):\n",
-    "        pass\n",
-    "    \n",
-    "    @abstractmethod\n",
-    "    def log_collab(self):\n",
-    "        pass\n",
-    "    \n",
-    "    def get_partition_matrix(self):\n",
-    "        return self.R"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def Collaborator_gmm(Collaborator):\n",
-    "    \"\"\"\n",
-    "    A Gaussian mixture model based collaborator\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    def __init__(self, X, Y=None, K=3, *args, **args):\n",
-    "        \"\"\"\n",
-    "        Parameters:\n",
-    "        X: pd.DataFrame\n",
-    "            the features\n",
-    "        Y (optional): pd.DataFrame\n",
-    "            the labels\n",
-    "        K (optional): int\n",
-    "            the number of clusters\n",
-    "        \"\"\"\n",
-    "        \n",
-    "        super().__init__(X=X, Y=Y, K=K)\n",
-    "        \n",
-    "    @njit\n",
-    "    def local_step(self):\n",
-    "        \"\"\"\n",
-    "        \n",
-    "        \"\"\""
    ]
   },
   {
