refactor: rm tests and njit decorators

--- a/notebooks/00-yf-master_algo_class.ipynb
+++ b/notebooks/00-yf-master_algo_class.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,16 +13,7 @@
     "\n",
     "from numba import njit\n",
     "from numba import int32, float32    # import the types\n",
-    "from numba.experimental import jitclass\n",
-    "\n",
-    "# spec = [\n",
-    "#     ('value', int32),               # a simple scalar field\n",
-    "#     ('array', float32[:]),          # an array field\n",
-    "# ]\n",
-    "\n",
-    "spec = [\n",
-    "    ('max_iter', int32)\n",
-    "]"
+    "from numba.experimental import jitclass"
    ]
   },
   {
@@ -34,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +35,6 @@
     "    \"\"\"\n",
     "    \n",
     "    \n",
-    "    @njit\n",
     "    def __init__(self, collabs=None, max_iter=0, *args, **kwargs):\n",
     "        \"\"\"\n",
     "        Parameters:\n",
@@ -76,7 +66,6 @@
     "        self.collaboration_history = [] # confidence matrices\n",
     "        \n",
     "        \n",
-    "    @njit\n",
     "    def launch_collab(self):\n",
     "        \"\"\"\n",
     "        Proceed to the collaboration.\n",
@@ -94,13 +83,15 @@
     "        while True:\n",
     "            stop, to_log = True, []\n",
     "            \n",
+    "            #save all collaboration matrices\n",
+    "            \n",
     "            # each data site is in turn considered as the local data site\n",
     "            for p, collab in enumerate(collabs):\n",
     "                # it is provided with a tuple for each remote data site: (Id, partition_matrix)\n",
     "                remote_Ids, remote_partitions = self.get_partitions_except_p(p)\n",
-    "                collab.collaborate(remote_Ids, remote_partitions)\n",
+    "                successful_collab = collab.collaborate(remote_Ids, remote_partitions)\n",
     "                to_log.append(deepcopy(collab.log_collab()))\n",
-    "                if not collab.stop_criterion():\n",
+    "                if successful_collab:\n",
     "                    stop = False\n",
     "            \n",
     "            # log the results\n",
@@ -109,14 +100,13 @@
     "            # should we stop ?\n",
     "            if stop:\n",
     "                break\n",
-    "            # if stop==True, then a collaboration occured, add 1 to counter\n",
+    "            # if stop==False, then a collaboration occured, add 1 to counter\n",
     "            n_iter += 1\n",
     "            \n",
     "            if n_iter == self.max_iter:\n",
     "                break\n",
     "            \n",
     "    \n",
-    "    @njit\n",
     "    def get_partitions_except_p(self, p):\n",
     "        \"\"\"\n",
     "        Get all partition matrices except number p.\n",
@@ -135,64 +125,6 @@
     "        return res_Ids, res_partitions\n",
     "    \n",
     "    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# tests"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class A:\n",
-    "    def __init__(self, a=0):\n",
-    "        self.a = a\n",
-    "        \n",
-    "    def double_a(self):\n",
-    "        try:\n",
-    "            return 2*self.a\n",
-    "        except:\n",
-    "            print(\"no attribute a\")\n",
-    "        \n",
-    "class B(A):\n",
-    "    def __init__(self, a=0, b=0):\n",
-    "        self.a=a\n",
-    "        self.b=b"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "b = B()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "b.double_a()"
    ]
   }
  ],
